Action name & description parity